--- a/src/assets/scss/my-changes.scss
+++ b/src/assets/scss/my-changes.scss
@@ -16,9 +16,10 @@
   }
   
   .coupon-status-not-applicable{
-      background-color: hsla(42, 86%, 73%, 0.863);
-      padding: 5px;
-      border-radius: 2px;
+    background-color: rgba(245, 210, 127, 0.863);
+    border-radius: 2px;
+    font-size: 1.1rem;
+    padding: 3px 8px;
   
       &:hover {
           background-color: hsla(42, 86%, 73%, 0.4);
